--- a/client/src/components/Dashboard/RightSide/RightSide.css
+++ b/client/src/components/Dashboard/RightSide/RightSide.css
@@ -1,193 +1,195 @@
-.RightSide{
-    display: flex;
-    flex-direction: column;
-    /* padding-top: 1rem; */
-    padding-right: 5%;
+.RightSide {
+  display: flex;
+  flex-direction: column;
+  /* padding-top: 1rem; */
+  padding-right: 5%;
 }
 
-#dark .RightSide{
-    background-color: var(--DarkBG);
-    color: #ECF5FC;
+#dark .RightSide {
+  background-color: var(--DarkBG);
+  color: #ecf5fc;
 }
-.Updates{
-    box-shadow: 0px 2px 4px rgba(119, 114, 114, 0.5);
-    background-color: #FAF4E6;
-    padding: 1rem;
-    margin-top: 2rem;
+.Updates {
+  box-shadow: 0px 2px 4px rgba(119, 114, 114, 0.5);
+  background-color: #faf4e6;
+  padding: 1rem;
+  margin-top: 2rem;
 }
-#dark .Updates{
-    background-color: #001629;
-    box-shadow: 0px 2px 4px #013765;
-}
-
-.active-programs ,.Updates{
-    width: 90%;
-    border-radius: 0.7rem;
-    gap: 0.6rem;
-    display: flex;
-    flex-direction: column;
-    font-size: 13px;
+#dark .Updates {
+  background-color: #001629;
+  box-shadow: 0px 2px 4px #013765;
 }
 
-.active-programs{
-    margin: 0 auto;
-    gap: 0.3rem;
-    cursor: pointer; 
+.active-programs,
+.Updates {
+  width: 90%;
+  border-radius: 0.7rem;
+  gap: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  font-size: 13px;
 }
 
-.update , .programs{
-    display: flex;
-    gap: 0.5rem;
-    width: 15rem;
+.active-programs {
+  margin: 0 auto;
+  gap: 0.3rem;
+  cursor: pointer;
 }
 
-.programs{
-    background-color:#F1F8FF;
-    padding:0.8rem;
-    border-radius: 0.7rem;
-    width: auto;
+.update,
+.programs {
+  display: flex;
+  gap: 0.5rem;
+  width: 15rem;
 }
 
-
-.Updates img, .programs img{
-    width: 2.5rem;
-    height: 2.5rem;
+.programs {
+  background-color: #f1f8ff;
+  padding: 0.8rem;
+  border-radius: 0.7rem;
+  width: auto;
 }
 
-.noti>div>span:nth-of-type(1){
-    font-weight: bold;
+.Updates img,
+.programs img {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
-.profile{
-    display:flex;
-    align-items: center;
-    margin-bottom: 1rem;
-    margin-top: 3rem;
-}
-.profile img{
-    width:4rem;
-    height:4rem
-}
-.profile-info{
-    display: flex;
-    flex-direction: column;
-    margin-left: 0.8rem;
-}
-.profile-info h2, .profile-info p{
-    margin: 0 !important;
-}
-.profile-info p{
-    font-size: 0.7rem;
+.noti > div > span:nth-of-type(1) {
+  font-weight: bold;
 }
 
-.profileRectLine{
-    height: 1px;
-    width: 100%;
-    background-color: black;
-    margin: 0.1rem auto;
+.profile {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-top: 3rem;
 }
-#dark .profileRectLine{
-    background-color: white;
+.profile img {
+  width: 4rem;
+  height: 4rem;
 }
-
-.notificationTime{
-    font-size: 0.6rem;
-    color:#777272;
+.profile-info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.8rem;
 }
-#dark .notificationTime{
-    color:#4AA9FA;
+.profile-info h2,
+.profile-info p {
+  margin: 0 !important;
 }
-.messagesRectLine{
-    width: 95%;
-    height: 1px;
-    margin: 0.01rem auto;
-    background-color: #4AA9FA80;
-    position: relative;
+.profile-info p {
+  font-size: 0.7rem;
 }
 
-.messagesRectLine:last-child{
-    display: none;
+.profileRectLine {
+  height: 1px;
+  width: 100%;
+  background-color: black;
+  margin: 0.1rem auto;
 }
-.add-program{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem 0;
-  }
-  .add-program button{
-    cursor: pointer;
-    height: 4rem;
-    width: 100%;
-    color: #005AA7D9;
-    font-size: 1rem;
-    font-weight: 700;
-    background: #F1F8FF;
-    opacity: 0.85;
-    border: 3px dashed #4AA9FA;
-    border-radius: 10px;
-  }
-  #dark .add-program button{
-    background: #001527;
-    border: 3px dashed #00559D;
+#dark .profileRectLine {
+  background-color: white;
+}
 
-  }
-  .appointmentWrapper{
-    display: flex;
-    padding: 1rem;
-    gap:1rem;
-    justify-content: center;
-    align-items: center;
-    background-color: #FAF4E6;
-    margin-bottom: 0.5rem;
-    border-radius: 20px;
-  }
-  #dark .appointmentWrapper{
-    background-color: #001629;
-  }
-  
-  .appointmentWrapper img{
-    width: 2rem;
-    height: 2rem;
-  }
-  .appointmentWrapper h3, .appointmentWrapper p{
-    padding: 0;
-    margin: 0;
-  }
+.notificationTime {
+  font-size: 0.6rem;
+  color: #777272;
+}
+#dark .notificationTime {
+  color: #4aa9fa;
+}
+.messagesRectLine {
+  width: 95%;
+  height: 1px;
+  margin: 0.01rem auto;
+  background-color: #4aa9fa80;
+  position: relative;
+}
+
+.messagesRectLine:last-child {
+  display: none;
+}
+.add-program {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0;
+}
+.add-program button {
+  cursor: pointer;
+  height: 4rem;
+  width: 100%;
+  color: #005aa7d9;
+  font-size: 1rem;
+  font-weight: 700;
+  background: #f1f8ff;
+  opacity: 0.85;
+  border: 3px dashed #4aa9fa;
+  border-radius: 10px;
+}
+#dark .add-program button {
+  background: #001527;
+  border: 3px dashed #00559d;
+}
+.appointmentWrapper {
+  display: flex;
+  padding: 1rem;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  background-color: #faf4e6;
+  margin-bottom: 0.5rem;
+  border-radius: 20px;
+}
+#dark .appointmentWrapper {
+  background-color: #001629;
+}
+
+.appointmentWrapper img {
+  width: 2rem;
+  height: 2rem;
+}
+.appointmentWrapper h3,
+.appointmentWrapper p {
+  padding: 0;
+  margin: 0;
+}
 
 @media screen and (max-width: 1200px) {
-    .RightSide{
-        justify-content: flex-start;
-        padding-top: 3rem;
-    }
+  .RightSide {
+    justify-content: flex-start;
+    padding-top: 3rem;
+  }
 }
 
-@media screen and (max-width: 768px)
-{
-    .Updates{
-        margin-top: 0;
-        width: 76vw;
-    }
-    .RightSide{
-        width: 100%;
-        margin-top: 0;
-    }
-    .RightSide>div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .profile{
-        display: none !important;
-    }
-    .add-program{
-        margin-bottom: 30vh;
-    }
-    .programs{
-        width: 75vw;
-    }
-    .active-programs{
-        justify-content: center;
-        align-items: center;
-    }
+@media screen and (max-width: 768px) {
+  .Updates {
+    margin-top: 0;
+    width: 76vw;
+  }
+  .RightSide {
+    width: 100%;
+    margin-top: 0;
+  }
+  .RightSide > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile {
+    display: none !important;
+  }
+  .add-program {
+    margin-bottom: 30vh;
+  }
+  .programs {
+    width: 75vw;
+  }
+  .active-programs {
+    justify-content: center;
+    align-items: center;
+  }
 }
